<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#DDDDDD"
    android:scaleType="centerCrop"
    tools:context=".NoInternetConnectionFragment" >
    
    <TextView
        android:id="@+id/nointernet_warning"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/grey_rounded_corner"
        android:text="@string/nointernet_warning"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/nointernet_message"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/nointernet_warning"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/grey_rounded_corner"
        android:text="@string/nointernet_message"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <ImageView 
        android:layout_below="@+id/nointernet_message"
        android:layout_width="250sp"
        android:layout_marginTop="28dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/nointernet"
        android:contentDescription="@string/nointernet_image"/>

    <Button
        android:id="@+id/nointernet_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/nointernet_button" />
</RelativeLayout>

